[package]
name = "demand_value"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
clap = { version = "4.1.6", features = ["derive"] }
sbx_common = { git = "https://github.com/thesandybridge/sbx_common" }
plotters = "0.3.4"
rand_distr = "0.4.3"
rand = "0.8.5"
